# You-Only-Look-Cytopathology-Once

./: README.md
classifier/: README.md  dataset.py  icn-top100-svc_best_nosearch_linear.joblib  icn-top200-svc_best_nosearch_linear.joblib  icndisconserve100-top100-svc_best_nosearch_linear.joblib  icndisconserve2-top100-svc_best_nosearch_linear.joblib  icndisconserve20-top100-svc_best_nosearch_linear.joblib  inference.py  svm_dataset.py  svm_train.py  utils.py  yolotiny-top10-svc_best_nosearch_linear.joblib  yolotiny-top100-svc_best_nosearch_linear.joblib  yolov3-top10-svc_best_nosearch_linear.joblib  yolov3-top100-svc_best_nosearch_linear.joblib
classifier/data_sets/: README.md  all_all_list.txt  gen_manual_label.py  manualcheck_121slide_label.txt  manualcheck_121slide_list.txt  manualcheck_42slide_label.txt  manualcheck_42slide_list.txt  manualcheck_label_origindata.txt  s1_val.txt  s2_all_list.txt  s2_val.txt  s3_all_list.txt  s3_test.txt  s3_train.txt  s4_all_list.txt  s4_val.txt  sfy39_val.txt  sfy_all_slide_list_formanualcheck.txt  sfy_all_slide_list_val.txt  sfy_all_slide_train_formanualcheck.txt  sfyall_train.txt  split_dataset.py  split_scanner.py
cls-WSI-level/: README.md  TBPTT.py  model.py  svm_dataset.py  svm_train.py  test_roc.py  train.py
cls-WSI-level/data_sets/: README.md  s1_all_list.txt  s1_test.txt  (+12 more)
cls-patch-level/: README.md  cls_icn.py  cls_test.py  cls_train.py  make_visdata.py
cpp/: CMakeLists.txt  README.md  main.cpp  tile_slide.cpp  tile_slide.h  timer.cpp
data/: README.md
det-WSI-level/: README.md  cls_icn.py  infer_WSI.py  infer_WSI_mrxs.py
det-patch-level/: README.md  kmeans_anchors.py  models.py  test.py  train.py
mobilenetv2/: README.md
qualitation-results/: README.md  cls_model.py  tsne_ana.py  vis_result.py
utils/: FocalLoss.py  datasets.py  parse_config.py
(+39 files in other folders)
